dev/platform-portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-portal
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: platform-portal
  template:
    metadata:
      labels:
        app: platform-portal
    spec:
      volumes:
        - name: app-config
          configMap:
            name: app-config
      containers:
        - name: platform-portal
          image: 589802233850.dkr.ecr.eu-west-1.amazonaws.com/platform-portal:v12
          command: ["node"]
          args:
            - "packages/backend"
            - "--config"
            - "app-config.yaml"
            - "--config"
            - "/app/config/app-config.production.yaml"
          ports:
            - containerPort: 7007
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - name: app-config
              mountPath: /app/config
              readOnly: true
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1.5Gi"
              cpu: "1000m"
