dev/platform-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-portal
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: platform-portal
  ports:
    - port: 80
      targetPort: 7007
